internal/fixtures/architecture/negative/template-expression/packages/ui/src/network.tsx
export const result = `outer ${`inner ${fetch("/api/v1/work")}`}`;
